--- a/mystyle.css
+++ b/mystyle.css
@@ -28,6 +28,7 @@ body {
 
 header {
   text-align: center;
+  padding: 20px;
 }
 
 h1 {
@@ -69,9 +70,83 @@ main {
   flex-wrap: wrap;
 }
 
-.btn {
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
+.navbar-nav {
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.navbar-nav .nav-item {
+  margin: 0 10px;
+  color:white;
+}
+
+.navbar-nav .nav-link {
+  font-size: 1rem;
+  color: #000;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #007bff;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.grid-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #f9f9f9;
+  text-decoration: none;
+  color: inherit;
+}
+
+.grid-item img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  margin-right: 10px;
+}
+
+.grid-item h5 {
+  font-size: 0.9rem;
+  margin: 0;
+  font-weight: 700;
+}
+
+.grid-item p {
+  font-size: 0.75rem;
+  margin: 5px 0;
+  text-align: left;
+}
+
+.grid-item:hover {
+  background-color: #e9ecef;
+  border-color: #ccc;
+}
+
+.btn-sm {
+  font-size: 0.75rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.bg-light {
+  background-color: gray !important;
+}
+
+.li.nav-item:nth-child(1) > a:nth-child(1){color: #007bff;}
+
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
 }
